--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,8 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Dec 04 19:53:42 WIB 2024
-sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
+
+#PAKAI SESUAI DENGAN SDK DI LAPTOP MASING MASING
+#sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Rosyid\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\mhilm\\AppData\\Local\\Android\\Sdk
