--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:targetApi="31">
         <activity
             android:name=".Profil"
@@ -19,17 +19,19 @@
             android:name=".Register"
             android:exported="false" />
         <activity
+            android:name=".Beranda"
+            android:exported="false" />
+        <activity
             android:name=".Baca"
             android:exported="false" />
         <activity
-            android:name=".Beranda"
+            android:name=".EditProfile"
             android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
