--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 #Wed Dec 04 19:53:42 WIB 2024
 
 #PAKAI SESUAI DENGAN SDK DI LAPTOP MASING MASING
-#sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
 #sdk.dir=C\:\\Users\\Rosyid\\AppData\\Local\\Android\\Sdk
-sdk.dir=C\:\\Users\\mhilm\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\mhilm\\AppData\\Local\\Android\\Sdk
