--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,7 +27,7 @@
             android:name=".Register"
             android:exported="false" />
         <activity
-            android:name=".Beranda"
+            android:name=".Login"
             android:exported="false" />
         <activity
             android:name=".Baca"
@@ -29,7 +36,7 @@
             android:name=".EditProfile"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".Beranda"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
