--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,5 @@
 
 #PAKAI SESUAI DENGAN SDK DI LAPTOP MASING MASING
 #sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
-sdk.dir=C\:\\Users\\Rosyid\\AppData\\Local\\Android\\Sdk
-#sdk.dir=C\:\\Users\\mhilm\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\Rosyid\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\mhilm\\AppData\\Local\\Android\\Sdk
